updated tocken processing
